--- a/acc_pre_container/templates/base.html
+++ b/acc_pre_container/templates/base.html
@@ -7,7 +7,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <title>Accident prediction</title>
+    <title>Kaza Tahmini</title>
     </head>
     <body>
 
@@ -20,10 +20,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/">Prediction <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/">Tahmin <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/results">DB</a>
+                    <a class="nav-link" href="/results">Veri Tabanı</a>
                 </li>
             </ul>
         </div>
