--- a/acc_pre_container/templates/results.html
+++ b/acc_pre_container/templates/results.html
@@ -4,7 +4,7 @@
     <div class="container pt-5">
         <div class="row">
 
-        <h1>Prediction Results</h1>
+        <h1>Tahmin Sonuçları</h1>
 
             <table class="table">
                 <thead>
