--- a/acc_pre_container/templates/predict.html
+++ b/acc_pre_container/templates/predict.html
@@ -38,27 +38,27 @@
             <form action="" id="post-form">
                 {% csrf_token %}
                 <div class="form-group">
-                    <label for="Hat_Kodu">Hat Kodu (1=34BZ, 2=34AS)</label>
+                    <label for="Hat_Kodu">Hat Kodu</label>
                     <input type="number" step="1" class="form-control" id="Hat_Kodu" placeholder="" required>
                 </div>
                 <div class="form-group">
-                    <label for="Gun">Gün (1=pzt, ..., 7=pazar)</label>
+                    <label for="Gun">Gün</label>
                     <input type="number" step="1" class="form-control" id="Gun" placeholder="" required>
                 </div>
                 <div class="form-group">
-                    <label for="Saat">Saat (1-48) </label>
+                    <label for="Saat">Saat</label>
                     <input type="number" step="1" class="form-control" id="Saat" placeholder="" required>
                 </div>
                 <div class="form-group">
-                    <label for="Arac_Kimligi">Araç Kimliği (4 haneli)</label>
+                    <label for="Arac_Kimligi">Araç Kimliği</label>
                     <input type="number" step="1" class="form-control" id="Arac_Kimligi" placeholder="" required>
                 </div>
                 <div class="form-group">
-                    <label for="Konum_Bilgisi">Konum Bilgisi (1- Beylikdüzü Sondurak (TÜYAP),..., 87- Söğütlüçeşme)</label>
+                    <label for="Konum_Bilgisi">Konum Bilgisi</label>
                     <input type="number" step="1" class="form-control" id="Konum_Bilgisi" placeholder="" required>
                 </div>
                 <div class="form-group">
-                    <label for="Personel_Sicili">Personel Sicili (6 haneli)</label>
+                    <label for="Personel_Sicili">Personel Sicili</label>
                     <input type="number" step="1" class="form-control" id="Personel_Sicili" placeholder="" required>
                 </div>
                 <div class="form-group">
